overflow repair

--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -24,7 +24,7 @@
   padding: 48px 20px 40px;
   opacity: 1;
   z-index: 2;
-  overflow: scroll;
+  overflow: auto;
 
   &__close-btn {
     border: none;
